--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,12 @@
     font-weight: 400;
     font-style: normal;
   }
-  
-
-  
+  .brown1{
+    color: #DDB892;
+  }
+.brown2{
+  color: #B08968;
+}
+.brown3{
+  color: #7F5539;
+}
